# gcp-cpp-poc

./: .gitignore  README.md
.devcontainer/: devcontainer.json
bazel-tutorial/: makefile
bazel-tutorial/main/: BUILD.bazel
cmake-tutorial/: CMakeLists.txt  README.md  main.cpp
cmake-tutorial/lib/math/: operations.cpp  operations.hpp
gcp-cpp-poc/: WORKSPACE.bazel  getsecret.cpp  makefile
gcp-cpp-poc/setup/: BUILD.bazel
gcp-cpp-poc/src/: BUILD.bazel  getsecret.cpp
gcp_cpp_lib_poc/: CMakeLists.txt  NOTES.md  README.md  build.sh  secret_client.cpp  secret_manager.cpp  secret_manager_lib.h
gcp_cpp_lib_poc/src/: secret_client.cpp
gcp_cpp_lib_poc/src/lib/secret_manager/: CMakeLists.txt  secret_manager.cpp  secret_manager_lib.h
